Fix overlap of the Back to text button; Disable clicking the TOC while the mobile code is up

--- a/src/main/content/_assets/css/guide-multipane.scss
+++ b/src/main/content/_assets/css/guide-multipane.scss
@@ -103,8 +103,8 @@
             }
 
             #code_column_tabs {
-                // Give more room for the 'Back to text' button.
-                max-width: calc(100% - 100px);
+                // Give more room for the 'Back to text' button so the tabs don't overlap.
+                max-width: calc(100% - 135px);
             }
 
             #dismiss_button {
