--- a/src/main/content/_assets/css/toc.scss
+++ b/src/main/content/_assets/css/toc.scss
@@ -173,6 +173,10 @@
 #mobile_toc_accordion_container {
     display: none;
     background-color: white;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 #mobile_toc_accordion {
